--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,10 +1,15 @@
 <p style="color: green"><%= notice %></p>
 
 <%= render @job %>
+<%= render 'postulations/apply'%>
+  <%= link_to "Back to jobs", jobs_path %>
+
+  <%if current_user.admin?%>
 
 <div>
   <%= link_to "Edit this job", edit_job_path(@job) %> |
-  <%= link_to "Back to jobs", jobs_path %>
 
   <%= button_to "Destroy this job", @job, method: :delete %>
 </div>
+
+<%end%>
