--- a/app/views/layouts/navbars/_navbar.html.erb
+++ b/app/views/layouts/navbars/_navbar.html.erb
@@ -1,13 +1,58 @@
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+  
+      <%if user_signed_in?%>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+       
+ 
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+       <li class="nav-item">
+         <%= button_to "Home", root_path, class:"nav-link", method: :get %>
+        </li>
+        <li class="nav-item">
+         <%= button_to "Mis postulaciones", my_postulations_path, class:"nav-link", method: :get %>
+        </li>
+        <li class="nav-item">
+         <%= button_to "Editar Profile", user_registration_path, class:"nav-link", method: :patch%>
+        </li>
+        <li class="nav-item">
+         <%= button_to "Cerrar Sesión", destroy_user_session_path, class:"nav-link",  method: :delete %>
+        </li>
+        <%if current_user.admin?%>
 
 
-        <%if user_signed_in?%>
-         <%= button_to "Cerrar Sesión", destroy_user_session_path,  method: :delete %>
-         <%= button_to "Mis postulaciones", my_postulations_path, class:"dropdown-item" %>
-         <%= button_to "Editar Profile", user_registration_path, method: :patch%>
-         
-          <%if current_user.admin?%>
- <%= form_with(model: @users) do |f| %>
-    <div class="field">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Entrevistas Pendientes()
+          </a>
+          <ul class="dropdown-menu">
+           <div class="field">
+            <div>
+              <h3>Employees postulations</h3>
+              <%Postulation.all.each do |p| %>
+              <p>
+              <%if p.user.avatar.persisted?%>
+              <%=image_tag p.user.avatar, class:"avatar rounded-circle"%> <%end%>--<%=p.user.name%> postuló hace <%=time_ago_in_words(p.created_at)%> al puesto  <%=p.job.cargo%>
+              </p>
+              
+              <%end%>
+              </div>
+              <%end%>
+              </div>
+              </ul>
+              </li>
+
+        <%if current_user.admin?%>
+           <%= form_with(model: @users) do |f| %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Crear Usuario
+          </a>
+          <ul class="dropdown-menu">
+           <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
@@ -50,21 +95,31 @@
     <%= f.submit "Crear Usuario" %>
   </div>
     <% end %><br />
-<% end %>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <%end%>
+  </div>
+  <%end%>
+  <%if user_signed_in?%>
+   <%if current_user.avatar.persisted?%>
+    <div>
+    
 
-<%if current_user.admin?%>
-<div>
-<h3>Employees postulations</h3>
-<%Postulation.all.each do |p| %>
-<p>
-<%if p.user.avatar.persisted?%>
-<%=image_tag p.user.avatar, class:"avatar rounded-circle"%> <%end%>--<%=p.user.name%> postuló hace <%=time_ago_in_words(p.created_at)%> al puesto  <%=p.job.cargo%>
-</p>
+    <%=image_tag current_user.avatar, class:"avatar rounded-circle m-8"%>
+    
+    </div>
+   <%end%>
+    <%end%>
+</nav>
 
-<%end%>
-</div>
-<%end%>
-<%end%>
+
+
+
+
+
+
 
 
        
